--- a/package.json
+++ b/package.json
@@ -3,31 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=18.18.0"
   },
   "scripts": {
     "dev": "next dev",
-    "build": "SKIP_TAILWIND=true NEXT_DISABLE_POSTCSS=1 next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.2.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "13.5.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@cloudflare/next-on-pages": "^1.8.5",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.15",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.3",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.6",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3",
     "typescript": "^5"
   }
 }
