优化Next.js配置以解决Cloudflare Pages部署问题，完全禁用TailwindCSS

--- a/.env.production
+++ b/.env.production
@@ -8,4 +8,7 @@ NEXT_DISABLE_TYPECHECK=1
 SKIP_TAILWIND=true
 
 # 禁用PostCSS处理  
-NEXT_DISABLE_POSTCSS=1 
+NEXT_DISABLE_POSTCSS=1
+
+NODE_ENV=production
+NEXT_TELEMETRY_DISABLED=1 
