--- a/package.json
+++ b/package.json
@@ -12,21 +12,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.5.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "15.2.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.8.5",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "autoprefixer": "^10.4.15",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.6",
+    "eslint": "^9",
+    "eslint-config-next": "15.2.3",
     "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5"
   }
 }
